# blockware

./: .gitignore  README.md  pyproject.toml
src/blockware/: cli.py  crypto.py  enc.py  wallet.py
src/blockware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
